--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Sistema de Clientes</title>
+    <title>Gerenciador de Clientes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
